--- a/FieryBlade/FieryBlade.csproj
+++ b/FieryBlade/FieryBlade.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FieryBlade.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
